// ==========================================
// 1. CORE IDENTITY (The User)
// ==========================================
// The central entity of the system.
// Contains essential identity and routing information.
Table users {
  // Internal System ID: Never expose to frontend to prevent enumeration.
  id uuid [primary key, default: `gen_random_uuid()`]
  
  // Public ID: Safe for URLs (e.g., /user/u_12345).
  // Using text allows for Nanoid or CUID.
  public_id text [not null, unique, note: "Nanoid. Safe for public URLs/APIs."]
  
  // Account Credentials & State
  username text [not null, unique]
  email text [not null, unique]
  email_verified_at timestamptz [default: null, note: "Security gate. Null = unverified."]
  
  // Access Control
  status text [not null, default: 'pending', note: "active | suspended | pending"]
  mfa_enabled boolean [not null, default: false]

  // Auditing (Denormalized)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "Requires trigger to auto-update."]
  last_sign_in_at timestamptz [default: null, note: "Denormalized for performance."]
}

// Extended profile data.
// Separated to keep the 'users' table lightweight and performant.
// One-to-One relationship with users.
Table user_profiles {
  id uuid [primary key, default: `gen_random_uuid()`]
  
  user_id uuid [not null, unique, note: "Strict 1:1 relationship."]

  // Identity
  first_name text
  last_name text
  display_name text [note: "Public facing name if different from username."]
  
  // Visuals & Details
  avatar_url text
  tagline text
  bio text
  hobbies text[] [note: "PostgreSQL array. Enables filtering/search on individual hobbies."]
  website_url text
  location text
  pronouns text [note: "e.g. they/them, she/her"]
  
  // Flexible Data
  social_links jsonb [default: null, note: "JSON object for Twitter, GitHub, etc."]

  // Metadata
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "Tracks profile updates. Requires trigger to auto-update."]
}

// specific configuration for the user account.
Table user_settings {
  id uuid [primary key, default: `gen_random_uuid()`]

  user_id uuid [not null, unique]

  privacy_settings jsonb [not null, note: "Controls visibility of profile fields."]
  preferences jsonb [default: null, note: "UI themes, notification settings, etc."]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "Requires trigger to auto-update."]
}

// ==========================================
// 2. AUTHENTICATION & SECURITY
// ==========================================
// Handles login methods, sessions, and verification.

// Stores login credentials.
// Supports multiple providers per user (Password, Google, GitHub, etc.)
Table user_credentials {
  id uuid [primary key, default: `gen_random_uuid()`]
  
  user_id uuid [not null]
  
  // Discriminator: 'password', 'google', 'apple', etc.
  provider_type text [not null] 
  
  // OAuth: The Provider's ID for the user.
  provider_id text [default: null]

  // Password: The hashed password.
  password_hash text [default: null]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "Requires trigger to auto-update."]

  indexes {
    user_id
    (provider_type, provider_id)
    (user_id, provider_type) [unique, note: "One credential per provider type per user."]
  }

  // Ensure either provider_id OR password_hash exists.
  checks {
    `num_nonnulls(provider_id, password_hash) = 1` [name: 'credentials_exclusive']
  }
}

// Short-lived tokens for email verification, password resets, etc.
Table verification_tokens {
  id uuid [primary key, default: `gen_random_uuid()`]
  user_id uuid [not null]
  
  // Security: Store hash, not raw token.
  token_hash text [not null, unique]
  
  type text [not null, note: "'email_verification' | 'password_reset'"]
  metadata jsonb [default: null, note: "Optional payload tied to token lifecycle (e.g. { newEmail } for email change)."]
  
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, type) // Lookup active tokens for a user/type combo
    expires_at // Cleanup jobs: DELETE WHERE expires_at < now()
  }
}

// Active user sessions.
// High churn table.
Table user_sessions {
  id uuid [primary key, default: `gen_random_uuid()`]

  user_id uuid [not null]

  // Secure lookup key
  session_token_hash text [not null, unique]

  // Refresh Token Rotation
  // Used to detect token reuse attacks.
  previous_session_token_hash text [default: null, unique]

  // Context
  ip_address text [not null]
  user_agent text [not null]

  // Lifecycle
  created_at timestamptz [not null, default: `now()`]
  last_active_at timestamptz [not null, default: `now()`]
  expires_at timestamptz [not null]
  revoked_at timestamptz [default: null]

  indexes {
    user_id // Fetch all sessions for a user
    expires_at // Cleanup jobs: DELETE WHERE expires_at < now()
  }
}

// Backup codes for MFA.
// Typically generated once and consumed one by one.
Table mfa_recovery_codes {
  id uuid [primary key, default: `gen_random_uuid()`]
  user_id uuid [not null]
  
  code_hash text [not null]
  
  created_at timestamptz [not null, default: `now()`]
  used_at timestamptz [default: null]

  indexes {
    user_id
    code_hash
  }
}

// ==========================================
// 3. ACCESS CONTROL (RBAC)
// ==========================================
// Role definitions and assignments.

Table roles {
  id uuid [primary key, default: `gen_random_uuid()`]

  name text [not null, unique, note: "e.g. 'admin', 'editor', 'subscriber'"]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "Requires trigger to auto-update."]
}

// Many-to-Many link between Users and Roles.
Table users_roles {
  user_id uuid [not null]
  role_id uuid [not null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, role_id) [pk, note: "Composite PK prevents duplicate assignments."]
    role_id // Index for reverse lookups (Who has this role?)
  }
}

// ==========================================
// 4. FEATURES & MODULES
// ==========================================
// Specific application features.

Table newsletters {
  id uuid [primary key, default: `gen_random_uuid()`]

  name text [not null, unique, note: "e.g. 'weekly-digest', 'product-updates'"]

  created_at timestamptz [not null, default: `now()`]
}

Table users_newsletters {
  user_id uuid [not null]
  newsletter_id uuid [not null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, newsletter_id) [pk, note: "Composite PK prevents duplicates."]
    newsletter_id
  }
}

// ==========================================
// 5. SYSTEM & AUDIT
// ==========================================
// Logging and system-wide records.

// Immutable log of important actions.
Table audit_logs {
  id uuid [primary key, default: `gen_random_uuid()`]
  
  // Actor (Nullable for system actions)
  user_id uuid [default: null]
  
  // Action
  action text [not null, note: "e.g. 'user.login', 'profile.updated'"]
  
  // Target (Polymorphic reference)
  entity_type text [default: null, note: "Table name or entity type, e.g. 'project'"]
  entity_id uuid [default: null, note: "ID of the affected entity"]
  
  // Payload
  details jsonb [default: null, note: "Changeset or metadata."]
  
  // Context
  ip_address text [default: null]
  user_agent text [default: null]

  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    action
    created_at
    (entity_type, entity_id) // Polymorphic lookup
  }
}

// ==========================================
// 6. API CLIENTS (Third-Party Services)
// ==========================================
// Manages external services that consume the API.

Table api_clients {
  id uuid [primary key, default: `gen_random_uuid()`]
  
  // Identity
  name text [not null, unique]

  // Credentials
  client_id text [not null, unique, note: "Public identifier. Nanoid or CUID recommended."]
  api_key_hash text [not null, unique, note: "SHA-256 hash of a securely generated random string (e.g. 32 bytes hex/base64)."]

  // Routing / Domain
  base_url text [not null, unique, note: "e.g., https://example.com. Allowed origin/base URL for CORS/redirects"]
  verify_email_path text [not null, default: '/verify-email/{token}', note: "Client route template. {token} is replaced server-side when generating links."]
  reset_password_path text [not null, default: '/reset-password/{token}', note: "Client route template. {token} is replaced server-side when generating links."]

  // Status
  is_active boolean [not null, default: true]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: "Requires trigger to auto-update."]
}

// ==========================================
// REFERENCES
// ==========================================
// Define foreign key constraints and delete behaviors.

// Identity & Auth
Ref: user_profiles.user_id - users.id [delete: cascade]
Ref: user_settings.user_id - users.id [delete: cascade]
Ref: user_credentials.user_id > users.id [delete: cascade]
Ref: verification_tokens.user_id > users.id [delete: cascade]
Ref: user_sessions.user_id > users.id [delete: cascade]
Ref: mfa_recovery_codes.user_id > users.id [delete: cascade]

// RBAC
Ref: users_roles.user_id > users.id [delete: cascade]
Ref: users_roles.role_id > roles.id [delete: cascade]

// Features
Ref: users_newsletters.user_id > users.id [delete: cascade]
Ref: users_newsletters.newsletter_id > newsletters.id [delete: cascade]

// Audit (Set Null to preserve history if user is deleted)
Ref: audit_logs.user_id > users.id [delete: set null]